Projet GL/Projet_GL/src/test/deca/syntax/invalid/simple_lex.res
src/test/deca/syntax/invalid/simple_lex.deca:11:0: no viable alternative at input 'idf'
